packages/kit/test/apps/basics/src/routes/load/invalidation/invalidate-then-goto/+page.server.js
/** @type {import('./$types').PageServerLoad} */
export function load({ url }) {
	url.searchParams.get('x');
	return {
		pageDate: new Date().getTime()
	};
}
